manifests/restapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restapi-ingress
  namespace: restapi
spec:
  rules:
  - http:
      paths:
      - path: /apis/v1/books
        pathType: Exact
        backend:
          service:
            name: restapi
            port:
              number: 8080
