manifests/restapi/case1-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restapi
  namespace: restapi
spec:
  podSelector:
    matchLabels:
      app: restapi
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nginx1
      ports:
        - protocol: TCP
          port: 8080
